Add unit test project

--- a/Jannine.Forms/Views/AboutPage.xaml
+++ b/Jannine.Forms/Views/AboutPage.xaml
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Jannine.Forms.AboutPage">
+<ContentPage 
+		xmlns="http://xamarin.com/schemas/2014/forms" 
+		xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+		Title="Jannine Weigel"
+		x:Class="Jannine.Forms.AboutPage">
 	<ContentPage.Content>
 		<ScrollView>
 			<StackLayout>
@@ -31,7 +35,9 @@ In 2015, Weigel released her first single, 'Chak Din Chak Ngo', followed by a nu
 					<Image WidthRequest="15" HeightRequest="15" x:Name="Twitter" Source="twitter.png" />
 					<Image WidthRequest="15" HeightRequest="15" x:Name="Facebook" Source="facebook.png" />
 					<Image WidthRequest="15" HeightRequest="15" x:Name="Instagram" Source="instagram.png" />
+					<Image WidthRequest="15" HeightRequest="15" x:Name="Soundcloud" Source="soundcloud.png" />
 				</StackLayout>
+				<StackLayout HeightRequest="20"></StackLayout>
 			</StackLayout>
 		</ScrollView>
 	</ContentPage.Content>
