--- a/Jannine.Forms/Views/TwitterPage.xaml
+++ b/Jannine.Forms/Views/TwitterPage.xaml
@@ -1,5 +1,59 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Jannine.Forms.TwitterPage">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+		xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+		xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions" 
+		x:Class="Jannine.Forms.TwitterPage" 
+		Icon="{Binding Icon}" 
+		IsBusy="{Binding IsBusy}" 
+		Title="{Binding Title}">
 	<ContentPage.Content>
+		<AbsoluteLayout>
+			<ListView 
+					CachingStrategy="RecycleElement" 
+					x:Name="TwitterListView" 
+					ItemsSource="{Binding Tweets}" 
+					HasUnevenRows="True" 
+					IsPullToRefreshEnabled="True" 
+					RefreshCommand="{Binding LoadTweetCommand}" 
+					IsRefreshing="{Binding IsBusy, Mode=OneWay}" 
+					AbsoluteLayout.LayoutFlags="All" 
+					AbsoluteLayout.LayoutBounds="0,0,1,1">
+				<ListView.ItemTemplate>
+					<DataTemplate>
+						<ViewCell>
+							<Grid Padding="10,5">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition Width="*" />
+								</Grid.ColumnDefinitions>
+								<controls:CircleImage Source="{Binding Image}" VerticalOptions="Center">
+									<controls:CircleImage.WidthRequest>
+										<OnPlatform x:TypeArguments="x:Double">
+											<OnPlatform.iOS>30</OnPlatform.iOS>
+										</OnPlatform>
+									</controls:CircleImage.WidthRequest>
+									<controls:CircleImage.HeightRequest>
+										<OnPlatform x:TypeArguments="x:Double">
+											<OnPlatform.iOS>30</OnPlatform.iOS>
+										</OnPlatform>
+									</controls:CircleImage.HeightRequest>
+								</controls:CircleImage>
+								<StackLayout Grid.Column="1" Padding="8" Spacing="4" VerticalOptions="Center">
+									<Label Text="{Binding Date}" FontSize="Medium" TextColor="#3498DB" LineBreakMode="NoWrap"/>
+									<Label Text="{Binding Text}" FontSize="10" x:Name="TweetText" LineBreakMode="WordWrap"/>
+								</StackLayout>
+							</Grid>
+						</ViewCell>
+					</DataTemplate>
+				</ListView.ItemTemplate>
+			</ListView>
+			<StackLayout IsVisible="{Binding IsBusy}" 
+					AbsoluteLayout.LayoutFlags="PositionProportional"
+					AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
+					BackgroundColor="#80000000" Padding="12">
+					<ActivityIndicator IsRunning="{Binding IsBusy}" Color="White"></ActivityIndicator>
+					<Label Text="Loading Twitter..." HorizontalOptions="Center" TextColor="White"></Label>
+			</StackLayout>
+		</AbsoluteLayout>
 	</ContentPage.Content>
 </ContentPage>
